[project]
name = "CSE-122-P2-absurdle-python"
version = "0.1.0"
description = "Python implementation of CSE 122 P2 Absurdle"
authors = [{ name = "Harry", email = "Harry0259@163.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []


[project.urls]
Homepage = "https://github.com/Harry-Jing/CSE-122-P2-absurdle-python"


[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"


[tool.black]
target-version = ["py312"]
# skip-string-normalization = true


[tool.isort]
profile = "black"
py_version = 312
length_sort = true


[tool.pytest.ini_options]
testpaths = ["tests"]